@@ -1,5 +1,11 @@
 2005-11-28 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/browser.cpp
+	(externproto_node_class::externproto_node_class): Can throw
+	boost::thread_resource_error.
+
+2005-11-28 Braden McDaniel  <braden@endoframe.com>
+
 	Doc-comment improvements.
 
 	* src/libopenvrml/openvrml/browser.cpp
